Determine whether franchises are more successful

--- a/Project 1_Explanatory Data Analysis & Data Presentation.ipynb
+++ b/Project 1_Explanatory Data Analysis & Data Presentation.ipynb
@@ -42,17 +42,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load modules and packages\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +491,7 @@
        "[44691 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2469,7 +2470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -2681,7 +2682,7 @@
        "40675  Walt Disney Pictures|Pixar Animation Studios   2015-11-03           NaN  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2865,11 +2866,454 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Are Franchises more successful?\n",
+    "4. __Analyze__ the Dataset and __find out whether Franchises (Movies that belong to a collection) are more successful than stand-alone movies__ in terms of:\n",
+    "\n",
+    "- mean revenue\n",
+    "- median Return on Investment\n",
+    "- mean budget raised\n",
+    "- mean popularity\n",
+    "- mean rating\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>revenue_musd</th>\n",
+       "      <th>budget_musd</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>ROI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Toy Story Collection</td>\n",
+       "      <td>373.554033</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>21.946943</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>12.451801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>262.797249</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>17.015539</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>4.043035</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>Grumpy Old Men Collection</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11.712900</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Waiting to Exhale</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>81.452156</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>3.859495</td>\n",
+       "      <td>6.1</td>\n",
+       "      <td>5.090760</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Father of the Bride Part II</td>\n",
+       "      <td>Father of the Bride Collection</td>\n",
+       "      <td>76.578911</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8.387519</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44686</th>\n",
+       "      <td>Subdue</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.072051</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44687</th>\n",
+       "      <td>Century of Birthing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.178241</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44688</th>\n",
+       "      <td>Betrayal</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.903007</td>\n",
+       "      <td>3.8</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44689</th>\n",
+       "      <td>Satan Triumphant</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.003503</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>44690</th>\n",
+       "      <td>Queerama</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.163015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>44691 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             title           belongs_to_collection  \\\n",
+       "0                        Toy Story            Toy Story Collection   \n",
+       "1                          Jumanji                             NaN   \n",
+       "2                 Grumpier Old Men       Grumpy Old Men Collection   \n",
+       "3                Waiting to Exhale                             NaN   \n",
+       "4      Father of the Bride Part II  Father of the Bride Collection   \n",
+       "...                            ...                             ...   \n",
+       "44686                       Subdue                             NaN   \n",
+       "44687          Century of Birthing                             NaN   \n",
+       "44688                     Betrayal                             NaN   \n",
+       "44689             Satan Triumphant                             NaN   \n",
+       "44690                     Queerama                             NaN   \n",
+       "\n",
+       "       revenue_musd  budget_musd  popularity  vote_average        ROI  \n",
+       "0        373.554033         30.0   21.946943           7.7  12.451801  \n",
+       "1        262.797249         65.0   17.015539           6.9   4.043035  \n",
+       "2               NaN          NaN   11.712900           6.5        NaN  \n",
+       "3         81.452156         16.0    3.859495           6.1   5.090760  \n",
+       "4         76.578911          NaN    8.387519           5.7        NaN  \n",
+       "...             ...          ...         ...           ...        ...  \n",
+       "44686           NaN          NaN    0.072051           4.0        NaN  \n",
+       "44687           NaN          NaN    0.178241           9.0        NaN  \n",
+       "44688           NaN          NaN    0.903007           3.8        NaN  \n",
+       "44689           NaN          NaN    0.003503           NaN        NaN  \n",
+       "44690           NaN          NaN    0.163015           NaN        NaN  \n",
+       "\n",
+       "[44691 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a subset will all data columns of interest and calculate ROI\n",
+    "movies[\"ROI\"] = movies.revenue_musd / movies.budget_musd\n",
+    "movies_subset = movies[[\"title\",\"belongs_to_collection\",\"revenue_musd\",\"budget_musd\",\"popularity\",\"vote_average\", \"ROI\"]]\n",
+    "movies_subset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create filters to select franchises or stand-alone movies\n",
+    "franchises = movies_subset.belongs_to_collection.notna()\n",
+    "stand_alones = movies_subset.belongs_to_collection.isna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare franchise or stand-alone movie statistics\n",
+    "franchise_revenue = movies_subset.groupby(franchises).revenue_musd.mean()[1]\n",
+    "stand_alone_revenue = movies_subset.groupby(stand_alones).revenue_musd.mean()[1]\n",
+    "franchise_ROI = movies_subset.groupby(franchises).ROI.mean()[1]\n",
+    "stand_alone_ROI = movies_subset.groupby(stand_alones).ROI.mean()[1]\n",
+    "franchise_budget = movies_subset.groupby(franchises).budget_musd.mean()[1]\n",
+    "stand_alone_budget = movies_subset.groupby(stand_alones).budget_musd.mean()[1]\n",
+    "franchise_pop = movies_subset.groupby(franchises).popularity.mean()[1]\n",
+    "stand_alone_pop = movies_subset.groupby(stand_alones).popularity.mean()[1]\n",
+    "franchise_ratings = movies_subset.groupby(franchises).vote_average.mean()[1]\n",
+    "stand_alone_ratings = movies_subset.groupby(stand_alones).vote_average.mean()[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "165.70819260175796"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "franchise_revenue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "44.7428140060955"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stand_alone_revenue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "856.4046224739209"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "franchise_ROI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6966.3906502038735"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stand_alone_ROI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "38.31984712958281"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "franchise_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18.047741174779976"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stand_alone_budget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.245051188662335"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "franchise_pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.592726062543502"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stand_alone_pop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.956805807622504"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "franchise_ratings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6.008787066287929"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stand_alone_ratings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Most Successful Franchises\n",
+    "5. __Find__ the __most successful Franchises__ in terms of\n",
+    "\n",
+    "- __total number of movies__\n",
+    "- __total & mean budget__\n",
+    "- __total & mean revenue__\n",
+    "- __mean rating__"
+   ]
   }
  ],
  "metadata": {
