Data analysis: most successful directors

--- a/Project 1_Explanatory Data Analysis & Data Presentation.ipynb
+++ b/Project 1_Explanatory Data Analysis & Data Presentation.ipynb
@@ -4165,6 +4165,440 @@
     "# Find the most successful franchise in terms of the mean rating\n",
     "succ_franchise.sort_values(by=[(\"vote_average\",\"mean\")], ascending=[False]).head(5)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Most Successful Directors\n",
+    "\n",
+    "6. __Find__ the __most successful Directors__ in terms of\n",
+    "\n",
+    "- __total number of movies__\n",
+    "- __total revenue__\n",
+    "- __mean rating__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>revenue_musd</th>\n",
+       "      <th>vote_average</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>director</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Dale Trevillion\\t</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Davide Manuli</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>E.W. Swackhamer</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vitaliy Vorobyov</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Yeon Sang-Ho</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2.129768</td>\n",
+       "      <td>6.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ярополк Лапшин</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>پیمان معادی</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>塩谷 直義</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>杰森·莫玛</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>5.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>진모영</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>17349 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     title  revenue_musd  vote_average\n",
+       "director                                              \n",
+       " Dale Trevillion\\t       2      0.000000           4.0\n",
+       " Davide Manuli           1      0.000000           6.9\n",
+       " E.W. Swackhamer         1      0.000000           5.9\n",
+       " Vitaliy Vorobyov        1      0.000000           5.5\n",
+       " Yeon Sang-Ho            4      2.129768           6.6\n",
+       "...                    ...           ...           ...\n",
+       "Ярополк Лапшин           1      0.000000          10.0\n",
+       "پیمان معادی              1      0.000000           6.0\n",
+       "塩谷 直義                    1      0.000000           7.2\n",
+       "杰森·莫玛                    1      0.000000           5.8\n",
+       "진모영                      1      0.000000           6.0\n",
+       "\n",
+       "[17349 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a dataframe with all our data of interest for downstream comparison\n",
+    "director_data = movies.groupby(\"director\").agg({\"title\":\"count\",\"revenue_musd\":\"sum\",\"vote_average\":\"mean\"})\n",
+    "director_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>revenue_musd</th>\n",
+       "      <th>vote_average</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>director</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>John Ford</th>\n",
+       "      <td>66</td>\n",
+       "      <td>85.170757</td>\n",
+       "      <td>6.381818</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michael Curtiz</th>\n",
+       "      <td>65</td>\n",
+       "      <td>37.817500</td>\n",
+       "      <td>5.998246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Werner Herzog</th>\n",
+       "      <td>54</td>\n",
+       "      <td>24.572580</td>\n",
+       "      <td>6.805556</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Alfred Hitchcock</th>\n",
+       "      <td>53</td>\n",
+       "      <td>250.107584</td>\n",
+       "      <td>6.639623</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Woody Allen</th>\n",
+       "      <td>49</td>\n",
+       "      <td>993.970588</td>\n",
+       "      <td>6.691837</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  title  revenue_musd  vote_average\n",
+       "director                                           \n",
+       "John Ford            66     85.170757      6.381818\n",
+       "Michael Curtiz       65     37.817500      5.998246\n",
+       "Werner Herzog        54     24.572580      6.805556\n",
+       "Alfred Hitchcock     53    250.107584      6.639623\n",
+       "Woody Allen          49    993.970588      6.691837"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the most successful directors in terms of total number of movies\n",
+    "director_data.sort_values(by=[\"title\"],ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>revenue_musd</th>\n",
+       "      <th>vote_average</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>director</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Steven Spielberg</th>\n",
+       "      <td>33</td>\n",
+       "      <td>9256.621422</td>\n",
+       "      <td>6.893939</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Peter Jackson</th>\n",
+       "      <td>13</td>\n",
+       "      <td>6528.244659</td>\n",
+       "      <td>7.138462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Michael Bay</th>\n",
+       "      <td>13</td>\n",
+       "      <td>6437.466781</td>\n",
+       "      <td>6.392308</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>James Cameron</th>\n",
+       "      <td>11</td>\n",
+       "      <td>5900.610310</td>\n",
+       "      <td>6.927273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>David Yates</th>\n",
+       "      <td>9</td>\n",
+       "      <td>5334.563196</td>\n",
+       "      <td>6.700000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  title  revenue_musd  vote_average\n",
+       "director                                           \n",
+       "Steven Spielberg     33   9256.621422      6.893939\n",
+       "Peter Jackson        13   6528.244659      7.138462\n",
+       "Michael Bay          13   6437.466781      6.392308\n",
+       "James Cameron        11   5900.610310      6.927273\n",
+       "David Yates           9   5334.563196      6.700000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the most successful directors in terms of total revenue\n",
+    "director_data.sort_values(by=[\"revenue_musd\"],ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>revenue_musd</th>\n",
+       "      <th>vote_average</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>director</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Antonis Sotiropoulos</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Brian Skeet</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Joel Heath</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lukas Bossuyt</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Osman F. Seden</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      title  revenue_musd  vote_average\n",
+       "director                                               \n",
+       "Antonis Sotiropoulos      1           0.0          10.0\n",
+       "Brian Skeet               1           0.0          10.0\n",
+       "Joel Heath                1           0.0          10.0\n",
+       "Lukas Bossuyt             1           0.0          10.0\n",
+       "Osman F. Seden            2           0.0          10.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find the most successful directors in terms of mean rating\n",
+    "director_data.sort_values(by=[\"vote_average\"],ascending=False).head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
