Update Project_02_Data import_APIs and JSON.ipynb

--- a/Movies_dataset_analysis/Project 2/Project_02_Data import_APIs and JSON.ipynb
+++ b/Movies_dataset_analysis/Project 2/Project_02_Data import_APIs and JSON.ipynb
@@ -3023,7 +3023,7 @@
    ],
    "source": [
     "# Generate the URL for an API request \n",
-    "api_key = \"96944f8e497f77db9d20db6e35c77804\"\n",
+    "api_key = \""\n",
     "release_date_gte = \"2020-01-01\"\n",
     "release_date_lte = \"2020-02-29\"\n",
     "url = \"https://api.themoviedb.org/3/discover/movie?api_key={}&release_date.gte={}&release_date.lte={}\".format(api_key, release_date_gte, release_date_lte)\n",
